        internal to public org.restlet.ext.ssl package.
      - Renamed Status#getName() method to getReasonPhrase() for more clarity
        regarding the purpose of the additional "description" property used
        for lengthier explanations.
      - Added Response#isFinal() and isProvisional() methods, based on
        Status#isInformational().
    - Enhancements
      - Updated and consolidated the SSL/HTTPS configuration parameters
        for all HTTPS connectors.
      - Added a warning message to indicate that an application without a 
        parent component can't handle outbound calls by default.
        Reported by John Logdson and Kristoffer Gronowski.
      - Allowed change of the parent context of a VirtualHost via the
        setContext() method.
    - Bug fixed
      - Fixed compatibility issue with GWT 2.3.
      - Fixed potential NPE in Restlet class when no context is available.
      - Fixed potential NPE in LogFilter. Reported by Aaron Summers.
      - Fixed parsing of HTTP requests with internal connector when the
        Host header was missing. Now falling back to IP address.
        Reported by Aaron Summers.
      - Fixed misleading log message when response are manually ranged
        (206 status and entity with range set). Reported by John Logsdon.
      - Fixed issue causing blocking of internal HTTP/SIP connector when 
        the entity was coming from Apache HTTP client.
      - Fixed issue causing potential loop in internal HTTP/SIP client
        when the response entity wasn't being consumed immediately.
      - Fixed issue causing potential IndexOutOfBounds exceptions.
      - The internal server (HTTP and SIP) now automatically exhausts the 
        request entity if it hasn't been consumed after the writing of the 
        final response.
      - The internal connector now calls back the ConnectorService methods.
      - The internal server now calls back Representation#release() method
        after sending an entity.